Added /ping endpoint
